# weechat-eventc

./: .gitignore  CNAME  Makefile.am  configure.ac  index.html  meson.build
include/: define-weechat-plugin.h
src/: config.vala  eventc.vala  plugin.c  weechat-eventc.sym
vapi/: config.vapi  weechat.vapi
